review queue workaround for FxOS overflow issue (bug 834259)

--- a/media/css/mkt/reviewers.less
+++ b/media/css/mkt/reviewers.less
@@ -268,6 +268,9 @@ header {
 table.data-grid .addon-version-notes a {
     text-decoration: none;
 }
+.data-grid .extra-info {
+    text-align: center;
+}
 
 .island {
     position: relative;
